got the new game button working and added an options button that we still need to create a view for. fixed a couple of bugs including the animation for cards shifting color sometimes not working right and the results banner sometimes not displaying when it should be

--- a/src/view.css
+++ b/src/view.css
@@ -36,23 +36,6 @@ body {
     height: 100%;
 }
 
-.Menu_Button {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    width: 40%;
-    height: 100%;
-
-    align-self: center;
-    justify-self: center;
-}
-
-.Menu_Button_Text {
-    font-size: 300%;
-}
-
 .Player_Hand {
     -ms-overflow-style: none;
     scrollbar-width: none;
